--- a/TSmartClinic.Presentation/Views/Pacientes/CardsPacientes.cshtml
+++ b/TSmartClinic.Presentation/Views/Pacientes/CardsPacientes.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
-    ViewBag.Titulo = "COnfigurações do Paciente";
+    ViewBag.Titulo = "Configurações do Paciente";
 }
 
 
