--- a/TSmartClinic.Presentation/Views/Home/Index.cshtml
+++ b/TSmartClinic.Presentation/Views/Home/Index.cshtml
@@ -1,15 +1,19 @@
 ﻿@model TSmartClinic.Presentation.Models.DashboardViewModel
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
     ViewBag.Titulo = "Dashboard";
     ViewBag.Icone = "bx bx-layer"; // Classe do ícone Boxicons
+  
 }
+
+
 
 <!-- FontAwesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
-@* <h3 class="mb-4">Bem-vindo ao Sistema</h3> *@
+ <h3 class="mb-4">Bem-vindo ao Sistema</h3> 
 
 <!-- Cartões Resumo -->
 <div class="row">
