--- a/TSmartClinic.Presentation/wwwroot/css/site.css
+++ b/TSmartClinic.Presentation/wwwroot/css/site.css
@@ -20,3 +20,32 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/*---------*/
+.user-header-info {
+    padding-right: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.user-email {
+    font-size: 1.25rem; /* Ou 20px */
+    color: #666; /* Ou como preferir */
+    font-weight: 500;
+}
+
+.user-separator {
+    width: 1px;
+    height: 24px;
+    background-color: #ccc;
+    display: inline-block;
+    pointer-events: none; /* não atrapalha o clique */
+}
+
+.header-profile-user {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+
