--- a/TSmartClinic.Presentation/Views/Pacientes/CentralPaciente.cshtml
+++ b/TSmartClinic.Presentation/Views/Pacientes/CentralPaciente.cshtml
@@ -98,6 +98,51 @@
                         new { Icon = "fa-user-tag", Label = "Competências" },
                         new { Icon = "fa-briefcase", Label = "Cargos e Salários" },
                         new { Icon = "fa-file-signature", Label = "Solicitações" },
+
+                          new { Icon = "fa-list", Label = "Histórico" },
+                        new { Icon = "fa-user-shield", Label = "SST" },
+                        new { Icon = "fa-star", Label = "Avaliações" },
+                        new { Icon = "fa-folder", Label = "Arquivos" },
+                        new { Icon = "fa-chalkboard-teacher", Label = "Treinamentos" },
+                        new { Icon = "fa-pen", Label = "Anotações" },
+                        new { Icon = "fa-clock", Label = "Linha do Tempo" },
+                        new { Icon = "fa-users", Label = "Gestão" },
+                        new { Icon = "fa-user-tag", Label = "Competências" },
+                        new { Icon = "fa-briefcase", Label = "Cargos e Salários" },
+                        new { Icon = "fa-file-signature", Label = "Solicitações" },
+            new { Icon = "fa-list", Label = "Histórico" },
+            new { Icon = "fa-user-shield", Label = "SST" },
+            new { Icon = "fa-star", Label = "Avaliações" },
+            new { Icon = "fa-folder", Label = "Arquivos" },
+            new { Icon = "fa-chalkboard-teacher", Label = "Treinamentos" },
+            new { Icon = "fa-pen", Label = "Anotações" },
+            new { Icon = "fa-clock", Label = "Linha do Tempo" },
+            new { Icon = "fa-users", Label = "Gestão" },
+            new { Icon = "fa-user-tag", Label = "Competências" },
+            new { Icon = "fa-briefcase", Label = "Cargos e Salários" },
+            new { Icon = "fa-file-signature", Label = "Solicitações" },
+            new { Icon = "fa-list", Label = "Histórico" },
+            new { Icon = "fa-user-shield", Label = "SST" },
+            new { Icon = "fa-star", Label = "Avaliações" },
+            new { Icon = "fa-folder", Label = "Arquivos" },
+            new { Icon = "fa-chalkboard-teacher", Label = "Treinamentos" },
+            new { Icon = "fa-pen", Label = "Anotações" },
+            new { Icon = "fa-clock", Label = "Linha do Tempo" },
+            new { Icon = "fa-users", Label = "Gestão" },
+            new { Icon = "fa-user-tag", Label = "Competências" },
+            new { Icon = "fa-briefcase", Label = "Cargos e Salários" },
+            new { Icon = "fa-file-signature", Label = "Solicitações" },
+            new { Icon = "fa-list", Label = "Histórico" },
+            new { Icon = "fa-user-shield", Label = "SST" },
+            new { Icon = "fa-star", Label = "Avaliações" },
+            new { Icon = "fa-folder", Label = "Arquivos" },
+            new { Icon = "fa-chalkboard-teacher", Label = "Treinamentos" },
+            new { Icon = "fa-pen", Label = "Anotações" },
+            new { Icon = "fa-clock", Label = "Linha do Tempo" },
+            new { Icon = "fa-users", Label = "Gestão" },
+            new { Icon = "fa-user-tag", Label = "Competências" },
+            new { Icon = "fa-briefcase", Label = "Cargos e Salários" },
+            new { Icon = "fa-file-signature", Label = "Solicitações" },
                         // duplicados apenas de exemplo...
                       
          
