--- a/TSmartClinic.Presentation/Views/Pacientes/_PacientesDados.cshtml
+++ b/TSmartClinic.Presentation/Views/Pacientes/_PacientesDados.cshtml
@@ -3,7 +3,7 @@
 
 @{
     var paciente = Model.Itens.FirstOrDefault();
-    var tituloPagina = "Central do Paciente";
+    var tituloPagina = "Dados do Paciente";
     var iconeTitulo = "fa-user"; // troque por outro se quiser
 }
 
